<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- PRIMARY THREAT & DEFENSE DOMAINS -->
    <group
        android:id="@+id/group_defense_domains"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_24"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_hardware_sentinels"
            android:icon="@drawable/ic_sim_card_24"
            android:title="@string/menu_hardware_sentinels" />

        <item
            android:id="@+id/nav_authentication"
            android:icon="@drawable/ic_pin_24"
            android:title="@string/menu_authentication" />

        <item
            android:id="@+id/nav_proximity_tripwire"
            android:icon="@drawable/ic_accessibility_24"
            android:title="@string/menu_proximity_tripwire" />

        <item
            android:id="@+id/nav_remote_signaling"
            android:icon="@drawable/ic_remote_24"
            android:title="@string/menu_remote_signaling" />

        <item
            android:id="@+id/nav_surveillance"
            android:icon="@drawable/ic_selfie_24"
            android:title="@string/menu_surveillance" />

        <item
            android:id="@+id/nav_destruction"
            android:icon="@drawable/ic_alert_triangle_24"
            android:title="@string/menu_destruction" />
    </group>

    <!-- SYSTEM CONFIGURATION, DIAGNOSTICS & ABOUT -->
    <group
        android:id="@+id/group_system"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_permissions"
            android:icon="@drawable/ic_shield_check_24"
            android:title="@string/menu_permissions" />

        <item
            android:id="@+id/nav_diagnostics"
            android:icon="@drawable/ic_touch_app_24"
            android:title="@string/menu_diagnostics" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24"
            android:title="@string/menu_about" />
    </group>

</menu>